UIP-246 UIP-653 UIP-621: fix WizardView later steps radio and checkboxes not re-rendering after select + add label to image upload button + fix button label text misalignment outside button border

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -742,7 +742,6 @@ input[type=file] {
 	}
 	.choose {
 		display: block;
-		width: 95px;
 		text-transform: none;
 	}
 	.file-info {
